--- a/cdn/stylebox-v1/editor.html
+++ b/cdn/stylebox-v1/editor.html
@@ -43,3 +43,7 @@
 	};
 
 </script>
+
+<readme>
+	This component is a content component, that displays content you put into it in editor. You can style this component in setttings.
+</readme>
